test/studies/hpcc/RA/marybeth/ra-uint-test1.good
ra-uint-test1.chpl:5: error: Cannot assign to uint(64) from int(64)
